--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="be">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,14 +11,14 @@
             color: #070707;
             text-align: center;
             font-size: 18px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
         h1 {
             color: #070707;
-            font-size: 47.339px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-size: 48px;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
         }
 
@@ -26,14 +26,14 @@
             color: #070707;
             text-align: center;
             font-size: 34px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
         }
 
         nav {
             color: #828282;
             font-size: 18px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
@@ -41,7 +41,7 @@
             color: #828282;
             text-align: center;
             font-size: 14px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
@@ -49,7 +49,7 @@
             color: #FFF;
             text-align: center;
             font-size: 18px;
-            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
             letter-spacing: 1.8px;
         }
@@ -69,109 +69,90 @@
             </ul>
         </nav>
     </header>
-
     <hr>
-
     <main>
         <h1>Denis Novik</h1>
         <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
         <div>
             <h2 id="about">About me</h2>
-            <p>
-                Hi, I'm Denis – UX/UI designer from Minsk.<br>
-                I'm interested in design and everything connected with it.
+            <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.
             </p>
             <br>
-            <p>
-                I'm studying at courses "Web and mobile design<br>
-                interfaces" in IT-Academy.
-            </p>
+            <p>I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</p>
             <br>
-            <p>
-                Ready to implement excellent projects<br>
-                with wonderful people.
-            </p>
+            <p>Ready to implement excellent projects<br>with wonderful people.</p>
         </div>
+
+
+        <section>
+            <h2 id="skills">Skills</h2>
+            <p>I work in such programs as</p>
+            <div>
+                <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
+                <p class="skills_signature">Adobe<br>Photoshop</p>
+                <div>
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                        style="display: inline-block; margin-right: 9px">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                        style="display: inline-block; margin-right: 9px">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                        style="display: inline-block; margin-right: 9px">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star"
+                        style="display: inline-block; margin-right: 9px">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star"
+                        style="display: inline-block">
+                </div>
+            </div>
+            <div>
+                <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
+                <p class="skills_signature">Adobe<br>Illustrator</p>
+                <div>
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                </div>
+            </div>
+            <div>
+                <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+                <p class="skills_signature">Adobe<br>After Effects</p>
+                <div>
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                </div>
+            </div>
+            <div>
+                <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
+                <p class="skills_signature">Figma</p>
+                <div>
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2 id="portfolio">Portfolio</h2>
+            <div>
+                <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
+                <p><a href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
+            </div>
+            <div>
+                <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
+                <p><a href="#" target="_blank">Reebok Store - Concept</a></p>
+            </div>
+            <div>
+                <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
+                <p><a href="#" target="_blank">Braun Landing Page - Concept</a></p>
+            </div>
+        </section>
     </main>
-
-    <section>
-        <h2 id="skills">Skills</h2>
-        <p>I work in such programs as</p>
-        <div>
-            <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
-            <p class="skills_signature">Adobe<br>Photoshop</p>
-            <div>
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star"
-                    style="display: inline-block">
-            </div>
-        </div>
-        <div>
-            <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
-            <p class="skills_signature">Adobe<br>Illustrator</p>
-            <div>
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
-            </div>
-        </div>
-        <div>
-            <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
-            <p class="skills_signature">Adobe<br>After Effects</p>
-            <div>
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
-            </div>
-        </div>
-        <div>
-            <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
-            <p class="skills_signature">Figma</p>
-            <div>
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <h2 id="portfolio">Portfolio</h2>
-        <div>
-            <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
-            <p>
-                <a href="#" target="_blank">Online fashion store -<br>Homepage</a>
-            </p>
-        </div>
-
-        <div>
-            <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
-            <p>
-                <a href="#" target="_blank">Reebok Store - Concept</a>
-            </p>
-        </div>
-
-        <div>
-            <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
-            <p>
-                <a href="#" target="_blank">Braun Landing Page - Concept</a>
-            </p>
-        </div>
-    </section>
-
     <footer>
         <h2 id="contacts">Contacts</h2>
         <p>Want to know more or just chat?<br>You are welcome!</p>
