--- a/students/motkaliuk_andrii/09_css_selectors/index.html
+++ b/students/motkaliuk_andrii/09_css_selectors/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="be">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -26,104 +25,87 @@
                 <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <hr>
     </header>
-
-    <hr>
-
     <main>
-        <h1>Denis Novik</h1>
-        <img src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
-        <div>
-            <h2 id="about">About me</h2>
-            <p>
-                Hi, I'm Denis – UX/UI designer from Minsk.<br>
-                I'm interested in design and everything connected with it.
-            </p>
-            <br>
-            <p>
-                I'm studying at courses "Web and mobile design<br>
-                interfaces" in IT-Academy.
-            </p>
-            <br>
-            <p>
-                Ready to implement excellent projects<br>
-                with wonderful people.
-            </p>
-        </div>
+        <section>
+            <h1>Denis Novik</h1>
+            <img src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
+            <div>
+                <h2 id="about">About me</h2>
+                <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with
+                    it.</p>
+                <br>
+                <p>I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</p>
+                <br>
+                <p>Ready to implement excellent projects<br>with wonderful people.</p>
+            </div>
+        </section>
+        <section>
+            <h2 id="skills">Skills</h2>
+            <p>I work in such programs as</p>
+            <div>
+                <img src="./images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
+                <p class="skills_signature">Adobe<br>Photoshop</p>
+                <div>
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div>
+                <img src="./images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
+                <p class="skills_signature">Adobe<br>Illustrator</p>
+                <div>
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div>
+                <img src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+                <p class="skills_signature">Adobe<br>After Effects</p>
+                <div>
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                </div>
+            </div>
+            <div>
+                <img src="./images/figma.svg" width="58" height="88" alt="Figma">
+                <p class="skills_signature">Figma</p>
+                <div>
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_full.svg" width="26" height="26" alt="full star" class="stars">
+                    <img src="./images/star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
+                </div>
+            </div>
+        </section>
+
+        <section class="portfolio">
+            <h2 id="portfolio">Portfolio</h2>
+            <div>
+                <img src="./images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
+                <p><a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
+            </div>
+            <div>
+                <img src="./images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
+                <p><a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a></p>
+            </div>
+            <div>
+                <img src="./images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
+                <p><a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a></p>
+            </div>
+        </section>
     </main>
-
-    <section>
-        <h2 id="skills">Skills</h2>
-        <p>I work in such programs as</p>
-        <div>
-            <img src="./images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
-            <p class="skills_signature">Adobe<br>Photoshop</p>
-            <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div>
-            <img src="./images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
-            <p class="skills_signature">Adobe<br>Illustrator</p>
-            <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div>
-            <img src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
-            <p class="skills_signature">Adobe<br>After Effects</p>
-            <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
-            </div>
-        </div>
-        <div>
-            <img src="./images/figma.svg" width="58" height="88" alt="Figma">
-            <p class="skills_signature">Figma</p>
-            <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
-            </div>
-        </div>
-    </section>
-
-    <section class="portfolio">
-        <h2 id="portfolio">Portfolio</h2>
-        <div>
-            <img src="./images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Online fashion store -<br>Homepage</a>
-            </p>
-        </div>
-
-        <div>
-            <img src="./images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Reebok Store - Concept</a>
-            </p>
-        </div>
-
-        <div>
-            <img src="./images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
-            <p>
-                <a class="portfolio_links" href="#" target="_blank">Braun Landing Page - Concept</a>
-            </p>
-        </div>
-    </section>
 
     <footer>
         <h2 id="contacts">Contacts</h2>
