--- a/students/motkaliuk_andrii/07_figma/index.html
+++ b/students/motkaliuk_andrii/07_figma/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="be">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -19,15 +19,18 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <hr>
     </header>
-    <hr>
     <main>
-        <h1>Denis Novik</h1>
-        <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
-        <h2 id="about">About me</h2>
-        <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</p>
-        <p>I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</p>
-        <p>Ready to implement excellent projects<br>with wonderful people.</p>
+        <section>
+            <h1>Denis Novik</h1>
+            <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
+            <h2 id="about">About me</h2>
+            <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.
+            </p>
+            <p>I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</p>
+            <p>Ready to implement excellent projects<br>with wonderful people.</p>
+        </section>
         <section>
             <h2 id="skills">Skills</h2>
             <p>I work in such programs as</p>
@@ -35,44 +38,44 @@
                 <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
                 <p>Adobe<br>Photoshop</p>
                 <div>
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
             <div>
                 <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
                 <p>Adobe<br>Illustrator</p>
                 <div>
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
-                    <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
             <div>
                 <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
                 <p>Adobe<br>After Effects</p>
                 <div>
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
             <div>
                 <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
                 <p>Figma</p>
                 <div>
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                    <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_full.svg" width="26" height="26" alt="full star">
+                    <img src="./vec_images/star_empty.svg" width="26" height="26" alt="empty star">
                 </div>
             </div>
         </section>
@@ -82,12 +85,10 @@
                 <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
                 <p><a href="#" target="_blank">Online fashion store -<br>Homepage</a></p>
             </div>
-
             <div>
                 <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
                 <p><a href="#" target="_blank">Reebok Store - Concept</a></p>
             </div>
-
             <div>
                 <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
                 <p><a href="#" target="_blank">Braun Landing Page - Concept</a></p>
